# XMDLoader

./: CMakeLists.txt  README.md  console.cpp  console.h  main.cpp  thompson.xmd  xmd2exporter_1.ms  xmdmodel.cpp  xmdmodel.h
math/: vector.cpp  vector.h
